<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC3A52">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/fragment4_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="Initial setups"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/welcome4_text1"
            android:layout_below="@+id/fragment4_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/welcome4_text1"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtID"
            android:layout_below="@+id/welcome4_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_noimage_shape"
            android:inputType="text"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="Ambulance ID" />

        <ImageView
            android:id="@+id/welcome4_image"
            android:layout_below="@+id/edtID"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:src="@drawable/find_location_illustration"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/welcome4_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome4_image"
            android:layout_margin="15dp"
            android:text="@string/welcome4_text2"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/welcome4_text3"
            android:layout_below="@+id/welcome4_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@string/welcome4_text3"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/welcome4_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome4_text4"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/welcome4_text3" />

        <Button
            android:id="@+id/btnAskPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome4_text4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Authorize Location Permission"
            android:textSize="18dp"
            style="@style/AppTheme.Button"/>

        <TextView
            android:id="@+id/welcome4_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome4_text5"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16dp"
            android:layout_margin="15dp"
            android:layout_below="@+id/btnAskPermissions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/welcome4_text5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:text="4/4"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="#f5586c"
                    android:text="Next"
                    android:textColor="#fff"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>