<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC3A52">

    <TextView
        android:id="@+id/welcome3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="Basic functions"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="22dp" />

    <LinearLayout
        android:id="@+id/welcome3_linear1"
        android:layout_below="@+id/welcome3_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_map_24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/welcome3_text1"
                android:textColor="#fff"
                android:textSize="15dp"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome3_linear2"
        android:layout_below="@+id/welcome3_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_patient_24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/welcome3_text2"
                android:textColor="#fff"
                android:textSize="15dp"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome3_linear3"
        android:layout_below="@+id/welcome3_linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_check" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/welcome3_text3"
                android:textColor="#fff"
                android:textSize="15dp"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottombar_illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_below="@+id/welcome3_linear3">

        <TextView
            android:id="@+id/welcome3_text4"
            android:layout_below="@+id/fragment4_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/welcome3_text4"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="15dp" />

        <include layout="@layout/bottom_navigation_bar"
            android:id="@+id/bottom_navigation_illustration"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="3/4"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#f5586c"
                android:text="Next"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>